--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,8 +3,11 @@ use_frameworks!
 
 target 'PatSwiftLib_Example' do
   pod 'PatSwiftLib', :path => '../'
+  
+  # Dependencies
   pod 'Alamofire', '~> 5.2'
   pod 'SwiftyJSON', '~> 4.0'
+  pod 'ObjectMapper', '~> 3.5'
   
   target 'PatSwiftLib_Tests' do
     inherit! :search_paths
